--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.site-layout-content {
+  margin-top: 40px;
+  min-height: 280px;
+  padding: 24px;
+  background: #fff;
 }
